...
                        ZStack {
                            Group {
                                switch btn.wrappedValue.type {
                                case .regular:
                                    RegularButtonView(config: btn.wrappedValue as! RegularButtonConfig, isInMacroEditor: isInMacroEditor, showKeyboard: $showKeyboard, keyboardInput: $keyboardInput)
                                        .accessibilityAddTraits(.isButton)
                                        .accessibilityIdentifier("ControllerButton")
                                case .joystick:
                                    JoystickButtonView(config: btn.wrappedValue as! JoystickConfig, isInMacroEditor: isInMacroEditor)
                                        .accessibilityAddTraits(.isButton)
                                        .accessibilityIdentifier("ControllerButton")
                                case .dpad:
                                    DPadButtonView(config: btn.wrappedValue as! DPadConfig, isInMacroEditor: isInMacroEditor)
...
                            Button(action: {
                                showDeleteAlert.toggle()
                            }) {
                                Image(systemName: "trash")
                            }
                            .foregroundStyle(.red)
                            .accessibilityIdentifier("DeleteLayoutBtn")
                            Button(action: {
                                newName = ""
                                showRenameAlert.toggle()
                            }) {
                                Image(systemName: "pencil")
                            }
                            .accessibilityIdentifier("RenameLayoutBtn")
                            Toggle("Rotation Lock", systemImage: "lock\(didLockRotation ? ".open" : "").rotation", isOn: $didLockRotation)
                                .buttonStyle(.borderless)
                                .toggleStyle(.button)
                                .popoverTip(orientationTip, arrowEdge: .top)
                                .onChange(of: didLockRotation, initial: false) {
                                    orientationTip.invalidate(reason: .actionPerformed)
...
                                applySelectedButton()
                            }
                            showAddPopup.toggle()
                        }) {
                            Image(systemName: "plus")
                        }
                        .accessibilityIdentifier("NewButtonBtn")
                    })
                } else {
                    ToolbarItem(placement: .topBarLeading, content: {
                        Button(action: {
                            showExitConfirmAlert.toggle()
                        }) {
...
                    showExitConfirmAlert = false
                }
                Button("Exit") {
                    showExitConfirmAlert = false
                    presentationMode.wrappedValue.dismiss()
                }
                .accessibilityIdentifier("ConfirmExit")
            })
            .alert("Delete Layout", isPresented: $showDeleteAlert, actions: {
                Button("Cancel", role: .cancel) {
                    showDeleteAlert = false
                }
                Button("Delete", role: .destructive) {
...
                    } catch {
                        UIApplication.shared.alert(body: error.localizedDescription)
                    }
                    deleting = true
                    presentationMode.wrappedValue.dismiss()
                }
                .accessibilityIdentifier("ConfirmDelete")
            }, message: {
                Text("Are you sure you want to delete this layout? This cannot be undone.")
            })
            .alert("Rename Layout", isPresented: $showRenameAlert, actions: {
                TextField("Layout Name", text: $newName)
                    .accessibilityIdentifier("LayoutNameField")
                Button("Cancel", role: .cancel) {
                    showRenameAlert = false
                }
                Button("Done") {
                    do {
...
                        try layoutManager.renameLayout(from: layoutManager.currentController.name, to: newName)
                        showRenameAlert = false
                    } catch {
                        UIApplication.shared.alert(body: error.localizedDescription)
                    }
                }
                .accessibilityIdentifier("LayoutNameOK")
            }, message: {
                Text("Choose a new name for the current layout.")
            })
            .simultaneousGesture(magnifyGesture, isEnabled: isEditor && !selectedBtn.isEmpty)
            .simultaneousGesture(rotGesture, isEnabled: isEditor && !selectedBtn.isEmpty)
        }
        .ignoresSafeArea(.keyboard, edges: isInMacroEditor ? .all : []) // Prevent controller background view from shifting when a keyboard is used to name a macro in the macro editor
        .coordinateSpace(.named("Controller"))
        .navigationTitle("Controller")
        .navigationBarTitleDisplayMode(.inline)
        .accessibilityElement(children: .contain)
        .accessibilityIdentifier("MainControllerScreen")
        .navigationBarBackButtonHidden()
        .defersSystemGestures(on: .all)
    }
    
    func isSafe(geometry: GeometryProxy) -> Bool {
        guard !selectedBtn.isEmpty else { return true }
...
