...
                            Picker("Button Shape", selection: $button.shape) {
                                ForEach(RegularButtonShape.allCases, id: \.self) { shape in
                                    Text(shape.rawValue).tag(shape)
                                }
                            }
                            .pickerStyle(.menu)
                            .accessibilityIdentifier("ButtonShapePicker")
                        }
                        
                        // MARK: Icon Configuration
                        Toggle("Has Icon", isOn: $button.hasIcon)
                        if button.hasIcon {
                            HStack {
                                Picker("Icon Type", selection: $button.iconType) {
                                    ForEach(RegularButtonIconType.allCases, id: \.self) { iconType in
                                        Text(iconType.rawValue).tag(iconType)
                                    }
                                }
                                .pickerStyle(.menu)
                                .accessibilityIdentifier("IconTypePicker")
                                .onChange(of: button.iconType, initial: false) {
                                    if button.iconType == .SFSymbol && UIImage(systemName: button.icon) == nil {
                                        // default to plus
                                        button.icon = AvailableSymbols.first!.symbols.first!.systemName
                                    }
                                }
                            }
                            HStack {
                                switch button.iconType {
                                case .Text:
                                    Text("Icon")
                                    Spacer()
                                    TextField("Icon", text: $button.icon)
                                        .textFieldStyle(RoundedBorderTextFieldStyle())
                                        .multilineTextAlignment(.trailing)
                                        .autocorrectionDisabled(true)
                                        .accessibilityIdentifier("Icon")
...
                                                    Text(title)
                                                }
                                            }
                                        }
                                    }
                                    .pickerStyle(.menu)
                                    .accessibilityIdentifier("PickSymbolBtn")
                                }
                            }
                        }
                    }
                } header: {
                    Text("\(button.type == .trigger ? "" : "Icon and ")Shape")
...
            Section {
                Button(action: {
                    showDeleteAlert.toggle()
                }) {
                    Text("Delete Button")
                }
                .accessibilityIdentifier("DeleteButtonBtn")
                .foregroundStyle(.red)
                .frame(maxWidth: .infinity)
            }
            .alert("Delete Button", isPresented: $showDeleteAlert, actions: {
                Button("Cancel", role: .cancel) {
                    showDeleteAlert = false
...
                Text("Are you sure you want to delete this button? This cannot be undone.")
            })
        }
        .listStyle(.sidebar)
        .background {
            Color(uiColor: .systemGroupedBackground)
                .accessibilityIdentifier("EditBtnList")
        }
    }
}

struct EditorSlider<V>: View where V : BinaryFloatingPoint, V.Stride : BinaryFloatingPoint {
    var title: String
...
                    }
                    Button("Done") {
                        verifyInputRange(v: &enteringValue)
                        value = enteringValue
                        enterAlert = false
                    }
                    .accessibilityIdentifier("EditorDoneBtn")
                }) {
                    Text("Enter a value for \(title).")
                }
            }
            if !hideSlider {
                Slider(value: $value, in: min...max, step: V.Stride(step)) {
...
