...
                Picker("Type", selection: $buttonType) {
                    ForEach(ButtonType.allCases, id: \.self) { type in
                        Label(getBtnTypeName(type), systemImage: getBtnTypeIcon(type)).tag(getBtnTypeName(type))
                    }
                }
                .pickerStyle(.menu)
                .accessibilityIdentifier("ButtonTypePicker")
                .onChange(of: buttonType, initial: true) {
                    if buttonType == .dpad {
                        buttonInput = .A
                    } else {
                        buttonInput = getButtonInputs(for: buttonType).first ?? .A
                    }
...
                    Picker("Input", selection: $buttonInput) {
                        ForEach(getButtonInputs(for: buttonType), id: \.self) { input in
                            Text(input.rawValue).tag(input.rawValue)
                        }
                    }
                    .pickerStyle(.menu)
                    .accessibilityIdentifier("ButtonInputPicker")
                }
                .padding(.horizontal, 10)
            }
            if buttonType == .trigger {
                HStack {
                    Text("Side")
...
                }
                dismiss()
            }) {
                Text("Add Button")
            }
            .buttonStyle(.borderedProminent)
            .accessibilityIdentifier("AddButtonBtn")
            Button(action: {dismiss()}) {
                Text("Cancel")
            }
            .buttonStyle(.bordered)
            .foregroundStyle(.red)
        }
...
